# table-docking

./: .gitignore  readme.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/autonomous_ui/: .gitignore
src/autonomous_ui/qt_ui/: CMakeLists.txt  package.xml
src/autonomous_ui/qt_ui/config/: table_docking_ui.ui  table_docking_ui_new.ui  table_qt_ui_camera.rviz  table_qt_ui_left.rviz  table_qt_ui_right.rviz  table_qt_ui_top.rviz
src/autonomous_ui/qt_ui/launch/: qt_ui.launch
src/autonomous_ui/qt_ui/scripts/: table_qt_ui_new.py
src/autonomous_ui/rviz/: table_docking.rviz
src/autonomous_ui/scat_autonomous_ui_launch/: CMakeLists.txt  package.xml
src/autonomous_ui/scat_autonomous_ui_launch/launch/: scat_autonomous_ui.launch
src/custom_msgs/: CMakeLists.txt  README.md  package.xml
src/custom_msgs/action/: ClickPoint.action  Detection.action  Docking.action  ToDoor.action  UpdateGoal.action
src/custom_msgs/msg/: Bbox.msg  Bboxes.msg  Click.msg  Door.msg  Drag.msg  Ramp.msg
src/custom_msgs/srv/: ClickSegmentation.srv  Detect.srv  GetPixel.srv  ShowGoal.srv  Status.srv  UiCommand.srv
src/depthimage_to_pointcloud2/: CMakeLists.txt  package.xml
src/depthimage_to_pointcloud2/launch/: depthimage_to_pointcloud2.launch  multi_depthimage_to_pointcloud2.launch
src/depthimage_to_pointcloud2/src/: depthimage_to_pointcloud2_node.cpp
src/dynamic_tf_publisher/: CMakeLists.txt  README.md  package.xml
src/dynamic_tf_publisher/config/: params-0.yaml  params-1.yaml  params-2.yaml  params-3.yaml  params-4.yaml  params-5.yaml  params-6.yaml
src/dynamic_tf_publisher/launch/: dynamic_tf_publisher.launch  multi_dynamic_tf_publisher.launch
src/dynamic_tf_publisher/src/: publisher.cpp
src/perception/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/perception/config/: perception_params.yaml
src/perception/include/: camera_detail.hpp  perception_nodelet.hpp
src/perception/launch/: action_node.launch  faster_vg.launch
src/perception/plugins/: nodelet_plugins.xml
src/perception/scripts/: ros_demo.py
src/perception/src/: camera_detail.cpp  perception_node.cpp  perception_nodelet.cpp  visualizer.cpp
src/semantic_autonomous_packages/: .gitignore  bag_script
src/semantic_autonomous_packages/autonomous_launch/: CMakeLists.txt  README.md  package.xml
src/semantic_autonomous_packages/autonomous_launch/launch/: autonomous.launch  laser_scan_to_pointcloud.launch
src/semantic_autonomous_packages/autonomous_launch/maps/: map_csb_2.pgm  map_csb_2.yaml
src/semantic_autonomous_packages/autonomous_launch/params/: footprint.yaml  known_object_path.yaml
src/semantic_autonomous_packages/table_docking_planner/: CMakeLists.txt  package.xml
src/semantic_autonomous_packages/table_docking_planner/include/table_docking_planner/: planner.hpp
src/semantic_autonomous_packages/table_docking_planner/launch/: planner.launch
src/semantic_autonomous_packages/table_docking_planner/params/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  costmap_under.yaml  docking_planner.yaml
src/semantic_autonomous_packages/table_docking_planner/rviz/: config_file.rviz
src/semantic_autonomous_packages/table_docking_planner/src/: planner.cpp
